[package]
name = "rust-texas"
version = "0.3.0"
edition = "2021"
description = "Crate to generate latex documents"
license = "MIT"
keywords = ["latex", "tex", "pdf", "generation"]
readme = "README.md"
repository = "https://github.com/Abhay478/texas" # yeehaw
documentation = "https://docs.rs/rust-texas/latest/rust-texas"
author = "Abhay Shankar K"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
