[package]
name = "rust-texas"
version = "0.3.6"
edition = "2021"
description = "Crate to generate latex documents"
license = "MIT"
keywords = ["latex", "tex", "pdf", "generation"]
readme = "README.md"
repository = "https://github.com/Abhay478/texas" # yeehaw
documentation = "https://docs.rs/rust-texas/latest/rust-texas"
author = "Abhay Shankar K"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
markdown = { version = "=1.0.0-alpha.21", optional = true }

[dev-dependencies]
walkdir = "2.5.0"

[features]
default = []
markdown = ["dep:markdown"]